--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>UpStream Box Remote Access</title>
+    <title>Remote Access</title>
 
     <meta charset="utf-8">
 
